update collection response schema
