# internal/delivery/http/schemas/collections/user_collection.go
@@ -2,23 +2,41 @@ package collections
 
 import (
 	"github.com/legocy-co/legocy/internal/delivery/http/schemas/users"
+	calculatorModels "github.com/legocy-co/legocy/internal/domain/calculator/models"
 	"github.com/legocy-co/legocy/internal/domain/collections/models"
 )
 
 type UserLegoSetCollectionResponse struct {
-	User users.UserDetailResponse    `json:"user"`
-	Sets []CollectionLegoSetResponse `json:"collection_sets"`
+	User   users.UserDetailResponse      `json:"user"`
+	Sets   []CollectionLegoSetResponse   `json:"collection_sets"`
+	Totals UserCollectionValuationTotals `json:"totals"`
 }
 
-func GetUserLegoCollectionResponse(collection models.LegoCollection) UserLegoSetCollectionResponse {
+func GetUserLegoCollectionResponse(
+	collection models.LegoCollection,
+	valuations []calculatorModels.LegoSetValuation,
+) UserLegoSetCollectionResponse {
 
 	setsResponses := make([]CollectionLegoSetResponse, 0, len(collection.Sets))
+
 	for _, set := range collection.Sets {
-		setsResponses = append(setsResponses, GetCollectionLegoSetResponse(set))
+
+		var setValuation *calculatorModels.LegoSetValuation
+		for _, valuation := range valuations {
+			if valuation.LegoSet.ID == set.LegoSet.ID && valuation.State == set.CurrentState {
+				setValuation = &valuation
+				break
+			}
+		}
+
+		setsResponses = append(setsResponses, GetCollectionLegoSetResponse(set, setValuation))
 	}
 
+	collectionTotals := GetCollectionValuationTotals(collection.Sets, valuations)
+
 	return UserLegoSetCollectionResponse{
-		User: users.GetUserDetailResponse(&collection.User),
-		Sets: setsResponses,
+		User:   users.GetUserDetailResponse(&collection.User),
+		Sets:   setsResponses,
+		Totals: collectionTotals,
 	}
 }
